[project]
name = "luna-test"
version = "0.1.0"
description = "\u001b[A"
authors = [
    {name = "TheAppleKingy",email = "pridanov.ali.job@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "dishka (>=1.9.1,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "faststream[rabbit] (>=0.6.7,<0.7.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]